separating routes, creating swagger documentarion of each route
